# chaosinjector

./: .gitignore  CHANGELOG.md  CHANGELOG.ru.md  LICENSE  README.md  README.ru.md  pyproject.toml
src/chaosinjector/: __init__.py  base.py
tests/: test_base.py
